--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -7,5 +7,8 @@
 	with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
 	is the sample application for the tutorial.
 </p>
+<p>
+	This is just another paragraph to test Guard with Spork
+</p>
 
 
